Fix: Post Grid | Spacing issue

--- a/src/css/view/post-grid.scss
+++ b/src/css/view/post-grid.scss
@@ -82,7 +82,7 @@
 }
 
 .eael-post-grid .eael-entry-footer .eael-entry-meta {
-	padding-left: 8px;
+	// padding-left: 8px;
 	text-align: left;
 }
 
@@ -111,19 +111,18 @@
 	display: block;
 }
 
-.eael-grid-post .eael-entry-wrapper,
-.eael-grid-post .eael-entry-footer,
-.eael-grid-post .eael-entry-header-after {
+.eael-grid-post .eael-entry-wrapper {
 	padding: 15px;
 }
 
-.eael-grid-post .eael-entry-header-after.style-two {
-	padding: 0;
+.eael-grid-post .eael-entry-footer .eael-author-avatar,
+.eael-grid-post .eael-entry-header-after .eael-author-avatar {
+	// padding: 15px 0;
 }
 
-.eael-post-grid .eael-entry-wrapper > .eael-entry-meta span.eael-posted-on,
-.eael-post-grid .eael-entry-wrapper > .eael-entry-header-after .eael-entry-meta span.eael-posted-on {
-	padding-left: 5px;
+.eael-post-grid .eael-entry-wrapper > .eael-entry-meta span.eael-posted-by,
+.eael-post-grid .eael-entry-wrapper > .eael-entry-header-after .eael-entry-meta span.eael-posted-by {
+	padding-right: 8px;
 }
 
 .eael-post-grid .eael-entry-wrapper > .eael-entry-meta span.eael-posted-on::before,
@@ -603,7 +602,7 @@
 			font-size: 12px;
 			a {
 				color: #929292;
-				margin-right: 7px;
+				// margin-right: 7px;
 			}
 		}
 	.post-meta-categories {
